:rocket: refactoring structs and responses
